[gd_scene load_steps=9 format=2]

[ext_resource path="res://imgs/other/pot.png" type="Texture" id=1]
[ext_resource path="res://imgs/other/pot_orange.png" type="Texture" id=2]
[ext_resource path="res://Plant.gd" type="Script" id=3]
[ext_resource path="res://Timer.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "sprout",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.75, 12.5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.756863, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.235294, 0.231373, 0.231373, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[node name="Plant" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "empty"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -118.0
margin_top = -85.0
margin_right = -57.0
margin_bottom = -71.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -27.0
margin_top = 28.0
margin_right = 29.0
margin_bottom = 48.0
text = "Feed"

[node name="Timer" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -28, 37 )

[node name="Phase" type="Label" parent="."]
visible = false
margin_left = -25.0
margin_top = -108.0
margin_right = 25.0
margin_bottom = -91.0
align = 1

[connection signal="mouse_entered" from="." to="." method="_on_Plant_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Plant_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
